Update config.json with proper user/repository.

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
-    "username": "put your username here",
-    "repositoryName": "put your repository name here",
+    "username": "kornel661",
+    "repositoryName": "blog-test-jm",
     "branch": "gh-pages"
   },
   "theme": {
