Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,7 +5,7 @@
     "branch": "gh-pages"
   },
   "site": {
-    "title": "Genealoga",
+    "title": "Genealogia",
     "description": "Opis blogu"
   },
   "socialnetwork": {
